// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ActionSelectionStep Snapshots > should render for active extension without update 1`] = `
"› View Details
  Disable Extension
  Uninstall Extension"
`;

exports[`ActionSelectionStep Snapshots > should render for disabled extension 1`] = `
"› View Details
  Enable Extension
  Uninstall Extension"
`;

exports[`ActionSelectionStep Snapshots > should render for disabled extension with update 1`] = `
"› View Details
  Update Extension
  Enable Extension
  Uninstall Extension"
`;

exports[`ActionSelectionStep Snapshots > should render for extension with update available 1`] = `
"› View Details
  Update Extension
  Disable Extension
  Uninstall Extension"
`;

exports[`ActionSelectionStep Snapshots > should render with no extension selected 1`] = `
"› View Details
  Enable Extension
  Uninstall Extension"
`;
